Fix alignment and update links

--- a/resources/css/post.css
+++ b/resources/css/post.css
@@ -2,7 +2,7 @@ html, body {
     background-size: cover;
     background-repeat: repeat-y;
     background-color: #000;
-    font-family: monospace;
+    font-family: "IBM Plex Mono", Monospace;
     color: white;
     margin: 0;
     padding: 0;
@@ -27,6 +27,11 @@ body > #topbar {
     background-color: white;
     text-align: center;
     color: #000;
+}
+
+body > #topbar * {
+    text-align: center;
+    font-family: "IBM Plex Mono", Monospace;
 }
 
 body > #topbar a {
@@ -66,6 +71,7 @@ rolling[hidden] {
     border-width: 2px;
     width: 16px;
     height: 16px;
+    vertical-align: middle;
 }
 
 #topbar box[green] {
